fix(DropDownMenu): fixing animation overflow issue

--- a/src/components/generic/UserInputs/DropDownMenu.css
+++ b/src/components/generic/UserInputs/DropDownMenu.css
@@ -104,13 +104,17 @@
     flex-flow: column nowrap;
     position: relative;
     height: auto;
-    min-height: 0;
+    /* min-height: 0; */
     max-height: min(350px, 100vh);
-    overflow: auto;
+    overflow: hidden;
     background-color: rgb(var(--background-color-1));
     border: none;
     z-index: 99;
     transition: all 0.2s;
+}
+
+.drop-down-menu.focus fieldset.options-container.overflow-auto {
+    overflow: auto;
 }
 
 .drop-down-menu label.option {
